--- a/CS.Cart/CS.Cart.Data/CS.Cart.Data.csproj
+++ b/CS.Cart/CS.Cart.Data/CS.Cart.Data.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CS.Cart.Domain\CS.Shared.Domain.csproj" />
   </ItemGroup>
 
